--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,23 +1,5 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  overflow-x: hidden;
-}
-
-.main {
+.content {
+  min-height: 280px;
   padding: 24px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background-color: #a64ac9;
-  height: 100%;
-  color: #ffffff;
-}
-
-.main h1 {
-  font-size: 5em;
-}
-
-.main p {
-  font-size: 2em;
+  background: #fff;
 }
