--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,6 @@
 .content {
-  min-height: 280px;
-  padding: 24px;
-  background: #fff;
+  padding: 24px 50px;
+  .postList {
+    background: white;
+  }
 }
