--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,34 @@
-.content {
-  padding: 24px 50px;
-  .postList {
-    background: white;
+$color-primary: #246d83;
+.layout {
+  .ant-layout-header {
+    background: $color-primary;
+    h1 {
+      text-shadow: 4px 1px black;
+      color: white;
+      text-align: center;
+      font-size: 55px;
+      font-weight: 900;
+      font-style: italic;
+    }
+  }
+  .content {
+    padding: 24px 50px;
+    .nameCard {
+      h1 {
+        text-align: center;
+        margin-bottom: 0;
+      }
+      h5 {
+        text-align: center;
+        margin-bottom: 30px;
+      }
+      .nameCard-avatar {
+        display: block;
+        margin: 0 auto 20px;
+      }
+    }
+    .postList {
+      background: white;
+    }
   }
 }
