--- a/src/styles/blogTemplate.scss
+++ b/src/styles/blogTemplate.scss
@@ -1,11 +1,16 @@
-.blogTemplate .blogTemplate-title {
-    margin: 80px 0 24px;
-}
-  
-.blogTemplate .blogTemplate-posted-by {
-    font-size: 1.2em;
-}
-
-.blogTemplate a {
-    color: #fff;
+.blogTemplate {
+    background: white;
+    padding: 24px;
+    h1 {
+        font-size: 2rem;
+        margin-bottom: 0;
+    }
+    pre, code, kbd, samp {
+        background-color: #223448;
+        color: white;
+        font-size: 1em;
+        font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier, monospace;
+        padding: 5px 10px;
+        border-radius: 5px;
+    }
 }
