--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,4 @@
+@import './responsive.scss';
 $color-primary: #2bbc8a;
 $color-second: #4d9aff;
 $color-bg: #1c2022;
@@ -20,6 +21,9 @@ $color-bg: #1c2022;
   .content {
     padding: 24px 50px;
     min-height: calc(100vh - 134px);
+    @include mobile {
+      padding: 10px
+    }
     .nameCard {
       h1 {
         text-align: center;
